--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:21:01 CST 2016 
  
 #=================== labels for ShareResources =================# 
 
@@ -12,8 +12,6 @@ activity.helptext  =Cargando tus recursos para compartir con otros
 tool.display.name  =Herramienta para compartir recursos
 tool.description  =Herramienta para compartir recursos
 appName  =Compartir recursos
-errorPage.title  =P\u00e1gina de error
-errorPage.heading  =Ha ocurrido alg\u00fan error al procesar su solicitud
 label.authoring.heading  =Compartir recursos Edici\u00f3n
 label.author.title  =Crear recursos para compartir
 label.authoring.heading.basic  =B\u00e1sico
@@ -42,8 +40,6 @@ label.authoring.basic.resource.url.input  =URL
 label.authoring.basic.resource.file.input  =Archivo
 label.authoring.basic.resource.description.input  =Descripci\u00f3n
 label.authoring.basic.resource.zip.file.input  =Archivo zip
-label.authoring.online.filelist  =Lista de archivos online
-label.authoring.offline.filelist  =Lista de archivos offline
 label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
 label.authoring.advance.run.content.auto  =Presentar el contenido directamente (si hay solo un recurso)
 label.authoring.advance.mini.number.resources.view  =N\u00famero m\u00ednimo de recursos para ver
@@ -63,8 +59,6 @@ error.upload.failed  =Ha ocurrido un error tratando de subir el archivo: {0}
 error.msg.upload.file.not.found  =No se pudo encontrar el archivo subido {0}.
 error.msg.zip.file.exception  =No se pudo abrir el archizo zip
 error.msg.file.not.found  =El archivo no ha sido encontrado
-error.msg.ims.package  =El paquete de IMS CP no es un formato v\u00e1lido
-error.msg.ims.application  =Ha ocurrido un error al procesar el paquete de IMS CP.
 error.msg.website.no.initial.file  =El archivo zip no contiene ningun archivo de nombre: index.htm, index.html, default.htm o default.html
 error.msg.io.exception  =Ha ocurrido una error al subir el archivo. Vuelva a intentar
 error.msg.invaid.param.upload  =Ha ocurrido un error al subir el archivo. Vuelva a intentar
@@ -102,15 +96,11 @@ label.monitoring.edit.activity.edit  =Editar
 message.monitoring.edit.activity.not.editable  =Esta actividad no se puede editar
 export.label.resource  =Recurso
 export.label.no.learning.object  =Paquete offline no disponible
-export.title  =Export Portfolio de Recursos Compartidos
 export.init.resource  =Recursos iniciales
-errors.header  =<b class="error">
-errors.footer  =</b>
 error.valueReqd  =No se puede dejar en blanco
 error.inputFileTooLarge  =El tama\u00f1o del archivo es muy grande
 error.uploading  =Ha ocurrido un error al subir el archivo
 error.title.empty  =El t\u00edtulo no se puede dejar en blanco
-message.msg.maxFileSize  =Tama\u00f1o maximo 250K
 label.open  =Abrir
 label.delete  =Borrar
 label.download  =Descargar
@@ -173,6 +163,11 @@ label.submit  =Finalizar
 monitoring.label.actions  =Acciones
 monitoring.label.views  =Ver
 label.monitoring.heading  =Seguimiento Compartir Recursos
+open.file.in.new.window  =Abrir archivo en nueva ventana
+label.resource.options  =Opciones
+label.activity.completion  =Al finalizar actividad
+label.notifications  =Notificaciones
+label.authoring.basic.resource.url.placeholder  =Incluir http:// o https://
 
 
-#======= End labels: Exported 167 labels for es ES =====
+#======= End labels: Exported 162 labels for es ES =====
