--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 04:58:55 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:21:02 CST 2016 
  
 #=================== labels for ShareResources =================# 
 
@@ -12,8 +12,6 @@ activity.helptext  =Uploading your resources to share with others.
 tool.display.name  =Share Resources Tool
 tool.description  =Tool for sharing resources.
 appName  =Share Resources
-errorPage.title  =Error page
-errorPage.heading  =Some error occurs when handling your request
 label.authoring.heading  =Share Resources Authoring
 label.author.title  =Share Resources
 label.authoring.heading.basic  =Basic
@@ -61,8 +59,6 @@ error.upload.failed  =Upload file failed: {0}
 error.msg.upload.file.not.found  =Could not find upload file {0}.
 error.msg.zip.file.exception  =Could not handle zip file when uploading file.
 error.msg.file.not.found  =File not found exception occurs when uploading file.
-error.msg.ims.package  =Invalid IMS CP format.
-error.msg.ims.application  =ImscpApplicationException occurs when uploading resource item file.
 error.msg.website.no.initial.file  =Website zip can not find out initial file (index.htm/html or default.htm/html).
 error.msg.io.exception  =IOException occurs when uploading file.
 error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
@@ -100,15 +96,11 @@ label.monitoring.edit.activity.edit  =Edit
 message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 export.label.resource  =Resource
 export.label.no.learning.object  =No offline package available
-export.title  =Export portfolio of Share Resource
 export.init.resource  =Initial resources
-errors.header  =<b class="error">
-errors.footer  =</b>
 error.valueReqd  =Value required
 error.inputFileTooLarge  =Input file size is too large!
 error.uploading  =error uploading
 error.title.empty  =Title can not be blank
-message.msg.maxFileSize  =Max 250K
 label.open  =Open
 label.delete  =Delete
 label.download  =Download
@@ -134,11 +126,11 @@ label.up  =Move Up
 label.down  =Move down
 label.monitoring.heading.access  =Learners list
 label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Shared Resources with the following instructions:
-error.reflection.emtpy  =Please input Notebook Entry
-title.reflection  =Notebook Entry
+error.reflection.emtpy  =Please input Notebook entry
+title.reflection  =Notebook entry
 label.continue  =Continue
 monitoring.user.fullname  =Name
-monitoring.user.reflection  =Notebook Entry
+monitoring.user.reflection  =Notebook entry
 page.title.monitoring.view.reflection  =View notebook entries
 button.close  =Close
 message.step.of  =Step {0} of {1}
@@ -178,4 +170,4 @@ label.notifications  =Notifications
 label.authoring.basic.resource.url.placeholder  =include http:// or https://
 
 
-#======= End labels: Exported 170 labels for en AU =====
+#======= End labels: Exported 162 labels for en AU =====
