LDEV-4120: Implement cut & paste for LDs and folders in Authoring UI.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -460,6 +460,7 @@ authoring.fla.default.annotation.label.title =Label
 authoring.fla.region.fit.button.tooltip =Fit
 authoring.fla.new.folder.button =New
 authoring.fla.copy.button =Copy
+authoring.fla.cut.button =Cut
 authoring.fla.paste.button =Paste
 authoring.fla.delete.button =Delete
 authoring.fla.rename.button =Rename
@@ -488,6 +489,8 @@ authoring.fla.svg.save.error =Error while saving sequence thumbnail
 authoring.fla.sequence.not.selected.error =Please choose a sequence
 authoring.fla.sequence.load.error =Error while loading the sequence
 authoring.fla.transition.from.exists.error =Transition from this activity already exists
+authoring.fla.modify.error =You can not modify this resource
+authoring.fla.folder.move.to.child.error =Can not move a folder into its child
 authoring.fla.export.image.dialog.title =Image export
 authoring.fla.export.sequence.dialog.title =Sequence export
 authoring.fla.activity.copy.title.prefix =Copy [0] of 
