LDEV-4030: Adding labels

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 06:48:13 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 05 03:07:36 CST 2016 
  
 #=================== labels for LAMS Central =================# 
 
@@ -719,6 +719,8 @@ ckeditor.math.formatting  =Formatting
 authoring.fla.cut.button  =Cut
 authoring.fla.modify.error  =You cannot modify this resource
 authoring.fla.folder.move.to.child.error  =Cannot move a folder into its child
+config.failed.attempts  =Number of failed logins before locking account
+config.lock.out.time  =Number of minutes to lock account for
 
 
-#======= End labels: Exported 713 labels for en AU =====
+#======= End labels: Exported 715 labels for en AU =====
