LDEV-3431, LDEV-3741, LDEV-3742 Adding labels

--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:15:55 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 05 03:30:55 CST 2016 
  
 #=================== labels for Scratchie =================# 
 
@@ -184,6 +184,18 @@ error.entered.marks.not.comma.separates  =Entered marks are not in a correct for
 label.authoring.export.qti  =Export IMS QTI
 label.scratchie.options  =Question options
 label.activity.completion  =End of activity
+label.authoring.advanced.burning.questions  =Option for burning questions
+label.continue.burning.questions  =Continue with burning questions
+label.burning.questions  =Burning questions
+label.burning.question  =Burning question
+label.time.limit  =Time limit (minutes)
+label.countdown.time.left  =Time left
+label.time.is.over  =Time is over. Processing your answers...
+label.are.you.ready  =You are going to participate in activity that has time limitation. Are you ready to start?
+label.ok  =OK
+label.count  =Count
+label.like  =Like
+label.unlike  =Unlike
 
 
-#======= End labels: Exported 178 labels for en AU =====
+#======= End labels: Exported 190 labels for en AU =====
