LDEV-3444 Adding labels

--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 05 03:30:55 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 05 03:38:05 CST 2016 
  
 #=================== labels for Scratchie =================# 
 
@@ -196,6 +196,7 @@ label.ok  =OK
 label.count  =Count
 label.like  =Like
 label.unlike  =Unlike
+label.general.burning.question  =General burning question
 
 
-#======= End labels: Exported 190 labels for en AU =====
+#======= End labels: Exported 191 labels for en AU =====
