--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -198,5 +198,8 @@ label.like  =Like
 label.unlike  =Unlike
 label.general.burning.question  =General burning question
 
+label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he commences it.
+label.waiting.for.leader.finish  =Time limit set by teacher is over. Please wait until a group leader finishes the activity.
+
 
 #======= End labels: Exported 191 labels for en AU =====
