--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -199,7 +199,8 @@ label.unlike  =Unlike
 label.general.burning.question  =General burning question
 
 label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he commences it.
-label.waiting.for.leader.finish  =Time limit set by teacher is over. Please wait until a group leader finishes the activity.
+label.waiting.for.leader.submit.notebook  =Time limit set by teacher is expired. Please wait until a group leader submits notebook.
+label.waiting.for.leader.submit.burning.questions  =Time limit set by teacher is expired. Please wait until a group leader submits burning questions.
 
 
 #======= End labels: Exported 191 labels for en AU =====
