LDEV-4109: Adding explicit comment style rating support to Peer Review. Also fixed a couple of counts that were not calculating correctly - the number of ratings done was being reported on all criteria in the lesson, not the individual criteria.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -97,6 +97,7 @@ label.activity.completion=End of Activity
 label.rating.style.star=Star Rating
 label.rating.style.ranking=Ranking
 label.rating.style.hedging=Hedging
+label.rating.style.comment=Comment
 label.rating.all=ALL
 label.rating.author.justify=Ask for hedging justification?
 label.rating.learner.hedge.assign.marks=Assign marks to answers. Max possible mark: 10
@@ -152,3 +153,5 @@ label.learner=Student
 label.spa.factor=SPA factor
 label.total.group.mark=Total team mark
 label.individual.mark=Individual mark
+error.edit.not.remove=You may edit but you may not remove a saved comment.
+error.unable.save.comments=Unable to save comments
