LDEV-3832:Mindmap Default Content cannot be altered as Flash swf does not load

--- a/lams_tool_mindmap/conf/language/ApplicationResources.properties
+++ b/lams_tool_mindmap/conf/language/ApplicationResources.properties
@@ -66,6 +66,7 @@ label.cancel  =Cancel
 label.created  =Created
 label.lastModified  =Last modified
 label.notebookEntry  =Notebook entry
+message.enableFlash =Sorry, this activity required Flash Player, please use a browser that has it or continue with the rest of the lesson by clicking 'Next Activity'.
 label.mindmapEntry =Mindmap
 error.missingParam  =Unable to continue. {0} is missing.
 error.exceedMaxFileSize  =File size exceeded
@@ -80,3 +81,4 @@ error.mark.invalid.decimal.number  ={0} field must be a valid decimal number.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 button.try.again  =Try Again
 message.enableJavaScript =Enable Javascript for Mindmap to load!
+
