--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -278,7 +278,7 @@ label.authoring.basic.type.mark.hedging  =Mark hedging
 label.option.correct  =Correct?
 label.assign.hedging.mark  =Assign marks to answers. Max possible mark: {0}
 label.learning.submit  =Submit
-warn.mark.hedging.wrong.total  =In order to continue, all mark hedging questions should have all available marks assigned.
+warn.mark.hedging.wrong.total  =In order to continue, all mark hedging questions should have all available marks assigned and justification of mark allocation is mandatory.
 label.incorrect.answer.nullifies.mark  =Assigns full mark only when the correct answers are selected.
 label.export.summary  =Summary
 label.justify.hedging.marks  =Please, justify your mark allocation.
