LDEV-4137 make showNotificationsDialog() be accessible from integrations pages

--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -304,6 +304,6 @@ lesson.chart.completed  =Completed
 class.add.all.confirm  =Do you want to add all learners to the class?
 class.add.all.success  =All learners were added to the class
 button.edit.class.add.all  =Add all
-
+index.emailnotifications  =Notifications
 
 #======= End labels: Exported 298 labels for en AU =====
