LDEV-4137, LDEV4054: adding labels and updating English

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 16:58:26 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 08 16:23:31 CST 2016 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -242,8 +242,6 @@ learners.search.phrase.clear.tooltip  =Clear search results
 button.live.edit  =Live Edit
 button.live.edit.tooltip  =Edit the current design for this lesson
 button.live.edit.confirm  =Live Edit allows you to modify the design of your lesson while the learners are attempting it. If you continue, your design will appear in Authoring for you to modify. Once you have done your changes you MUST "Apply changes" to the design so learners can progress. If these changes are not applied, the learners will NOT be able to continue with the lesson. Do you want to continue?
-button.close.branching  =Close branching
-button.close.branching.tooltip  =Close the currently open branching activity and come back to the top sequence
 button.journal.entries  =Journal entries
 button.journal.entries.tooltip  =View all Journal Entries saved by Learners
 tab.lesson  =Lesson
@@ -304,6 +302,8 @@ lesson.chart.completed  =Completed
 class.add.all.confirm  =Do you want to add all learners to the class?
 class.add.all.success  =All learners were added to the class
 button.edit.class.add.all  =Add all
+force.complete.learner.command.message  =The instructor has moved you to another activity.
+index.emailnotifications  =Notifications
 
 
 #======= End labels: Exported 298 labels for en AU =====
