LDEV-3832: adding label

--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:23:25 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 08 21:11:32 CST 2016 
  
 #=================== labels for Mindmap =================# 
 
@@ -94,6 +94,7 @@ monitor.summary.date.restriction.removed  =Deadline has been removed
 button.submit  =Finish
 label.mindmap.options  =Mindmap options
 label.activity.completion  =End of activity
+message.enableFlash  =Sorry, this activity requires the Adobe Flash Player plugin, which does not seem to be present in your browser. Nevertheless, you can continue with the next activities.
 
 
-#======= End labels: Exported 88 labels for en AU =====
+#======= End labels: Exported 89 labels for en AU =====
