--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:23:22 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 08 21:12:42 CST 2016 
  
 #=================== labels for Mindmap =================# 
 
@@ -94,6 +94,7 @@ monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
 button.submit  =Finalizar
 label.mindmap.options  =Options
 label.activity.completion  =Al finalizar actividad
+message.enableFlash  =Esta actividad require del la extension Adobe Flash Player en su browser. De todas formas puede continuar con las siguientes actividades.
 
 
-#======= End labels: Exported 88 labels for es ES =====
+#======= End labels: Exported 89 labels for es ES =====
