LDEV-3832 :Mindmap Default Content cannot be altered as Flash swf does not load

--- a/lams_tool_mindmap/conf/language/ApplicationResources.properties
+++ b/lams_tool_mindmap/conf/language/ApplicationResources.properties
@@ -81,4 +81,5 @@ error.mark.invalid.decimal.number  ={0} field must be a valid decimal number.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 button.try.again  =Try Again
 message.enableJavaScript =Enable Javascript for Mindmap to load!
+message.enableFlashAuthorMonitor =Enable Flash for Mindmap to load!
 
