--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
@@ -95,6 +95,8 @@ button.submit  =Finish
 label.mindmap.options  =Mindmap options
 label.activity.completion  =End of activity
 message.enableFlash  =Sorry, this activity requires the Adobe Flash Player plugin, which does not seem to be present in your browser. Nevertheless, you can continue with the next activities.
+message.enableJavaScript =Enable Javascript for Mindmap to load!
+message.enableFlashAuthorMonitor =Enable Flash for Mindmap to load!
 
 
 #======= End labels: Exported 89 labels for en AU =====
