--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 08 16:23:31 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 09 19:50:21 CST 2016 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -304,6 +304,7 @@ class.add.all.success  =All learners were added to the class
 button.edit.class.add.all  =Add all
 force.complete.learner.command.message  =The instructor has moved you to another activity.
 index.emailnotifications  =Notifications
+label.email  =Email
 
 
-#======= End labels: Exported 298 labels for en AU =====
+#======= End labels: Exported 299 labels for en AU =====
