LDEV-4054 updating Spanish

--- a/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,12 +2,11 @@ appName = monitor_java
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 09 19:56:41 CST 2016 
  
 #=================== labels for Monitor (Java) =================# 
 
 button.finished  =Terminado
-error.message.login  =Necesita entrar de nuevo al sistema.
 error.title  =Ha occurido un error
 label.synch.gate.title  =Puerta de Sincronismo
 label.permission.gate.title  =Puerta de Permiso
@@ -52,11 +51,7 @@ force.complete.stop.message.gate  =La finalizaci\u00f3n forzada ha sido detenida
 force.complete.stop.message.completed.to.activity  =La terminaci\u00f3n forzada se ha realizado exitosamente
 force.complete.stop.message.completed.to.end  =La finalizaci\u00f3n forzada ha concretado hasta terminar la lecci\u00f3n.
 force.complete.stop.message.stopped.unexpectedly  =La finalizaci\u00f3n forzada ha terminado de procesar. Por favor verifique el progreso del estudiante en la pesta\u00f1a de estudiantes.
-export.portfolio.window.title  =Exportar Portfolio
-export.portfolio.generating.message  =Generando el portfolio, por favor espere
-export.portfolio.generation.complete.message  =Se ha finalizado el portfolio. Acepte el archivo para guardar y despu\u00e9s cierre esta ventana.
 audit.lesson.created  =La Lecci\u00f3n "{0}" ha sido creada con dise\u00f1o "{1}", portfolio export para estudiantes configurado como {2}.
-audit.learner.portfolio.set  =La Lecci\u00f3n "{0}" tiene portfolio export para estudiatnes configurado como {1}.
 label.branching.general.instructions  =Coloca a los participantes de la lecci\u00f3n en sus ramas. Inicialmente puedes a\u00f1adir y eliminar usuarios, pero una vez que el participante comienza una de la ramas no podr\u00e1s eliminar usuarios de ninguna de \u00e9stas. Si intentas eliminar a alguien de una rama y no se elimina, comprueba su progreso- si comienza a utilizar una rama mientras est\u00e1s en esta pantalla no tendr\u00e1s ning\u00fan error pero no podr\u00e1s eliminarlo de la rama. Se podr\u00e1 a\u00f1adir grupos a las ramificaciones
 label.branching.branch.heading  =Rama
 label.branching.non.allocated.users.heading  =Estudiantes que no tienen asignada una rama
@@ -93,24 +88,9 @@ label.grouping.general.instructions.branching  =Esta activifad de grupo se utili
 label.grouping.popup.viewmode.message  =Viendo grupos. La asignaci\u00f3n de estudiantes a grupos no se puede modificar.
 label.gate.list.have.not.met.conditions.learners  =No se han cumplidos las condiciones.
 message.gate.condition.force.pass  =Atenci\u00f3n: esto permitir\u00e1 a todos los estudiantes pasar sin importar las condiciones que se han especificado.
-chart.btn.activity.split  =Divisi\u00f3n de actividades
-chart.btn_completion.rate  =Grado de finalizaci\u00f3n
-chart.series.completed.time  =Tiempo de finalizaci\u00f3n
-chart.series.average.time  =Tiempo promedio
-chart.series.duration  =Duraci\u00f3n
-chart.legend.average  =Promedio
 show.average.checkbox  =Mostrar promedio
 search.learner.textbox  =Buscar
-chart.learner.linear.axis.title  =tiempo (minutos)
-chart.learner.category.axis.title  =Actividades
-chart.learner.datatip.average  =(promedio)
 label.learner  =Estudiante
-time.chart.panel.title  =Gr\u00e1fica Tiempo
-chart.time.format.hours  =horas
-chart.time.format.minutes  =minutos
-chart.time.format.seconds  =segundos
-sys.error.msg.start  =No se pudo crear una lecci\u00f3n.
-sys.error  =Error de sistema
 title.lbl  =T\u00edtulo
 learner.lbl  =Estudiantes {0}
 wizardTitle.x.lbl  =Lecci\u00f3n: {0}
@@ -118,7 +98,6 @@ al.alert  =Atenci\u00f3n
 al.validation.msg2  =El t\u00edtulo de la lecci\u00f3n es necesario.
 summery.desc.lbl  =Descripci\u00f3n:
 summery.learners.lbl  =Estudiantes:
-wizard.learner.expp.cb.lbl  =Activar Portfolio Export para estudiantes
 al.validation.msg1  =Se debe seleccionar una secuencia v\u00e1lida
 finish.btn  =Empezar en Seguimiento
 al.validation.schtime  =Seleccione una fecha a comenzar
@@ -137,7 +116,6 @@ add.lesson.panel.title  =Crear lecci\u00f3n en {0}
 lesson.tab.label  =Lecci\u00f3n
 class.tab.label  =Curso
 advanced.tab.label  =Otras opciones
-add.now.button.label  =Crear Lecci\u00f3n
 lesson.tab.heading.label  =Seleccione la secuencia para la que desea crear la leccion y luego presione "Crear Lecci\u00f3n"
 advanced.tab.form.advanced.options.label  =Otras Opciones
 advanced.tab.form.enable.im.label  =Activar Mensajes Instantaneos
@@ -223,7 +201,6 @@ button.schedule  =Programar
 button.schedule.tooltip  =Horario de las clases para iniciar en un tiempo futuro
 button.start.now  =Iniciar ahora
 button.start.now.tooltip  =Comience la lecci\u00f3n inmediatamente
-lesson.enable.portfolio  =Activar Export Portfolio
 lesson.enable.presence  =Permitir a los estudiantes a ver qui\u00e9n est\u00e1 en l\u00ednea
 lesson.enable.presence.alert  =Ahora los estudiantes pueden ver qui\u00e9n est\u00e1 en l\u00ednea
 lesson.disable.presence.alert  =Ahora los estudiantes no pueden ver qui\u00e9n est\u00e1 en l\u00ednea
@@ -257,7 +234,6 @@ label.learner.progress.activity.completed.tooltip  =Haga doble clic para ver est
 label.learner.progress.activity.attempted.tooltip  =El usuario ha intentado pero que a\u00fan no ha terminado esta actividad
 label.learner.progress.activity.tostart.tooltip  =El estudiante necesita realizar esta actividad antes de que usted pueda acceder a ella
 label.learner.progress.activity.support.tooltip  =Haga doble clic para abrir la actividad de apoyo
-button.export.learner.tooltip  =Exportar el portfolio del estudiante y guardarlo en su computadora para referencia futura
 button.timechart  =Ver tabla de tiempo
 button.timechart.tooltip  =Ver un gr\u00e1fico del progreso estudiante seleccionado en funci\u00f3n del tiempo para cada actividad
 learners.page  =P\u00e1gina
@@ -266,8 +242,6 @@ learners.search.phrase.clear.tooltip  =Limpiar los resultados de b\u00fasqueda
 button.live.edit  =Edici\u00f3n en Vivo
 button.live.edit.tooltip  =Modifique el dise\u00f1o actual para esta lecci\u00f3n
 button.live.edit.confirm  =Edici\u00f3n en Vivo le permite modificar el dise\u00f1o mientras los estudiantes estan realizando la lecci\u00f3n. Si continue, el dise\u00f1o aparecer\u00e1 en la interfaz de autor\u00eda donde usted podr\u00e1 realizar las modificaciones. Una vez realizado los cambios, deber\u00e1 "Aplicar cambios" para que los estudiantes puedan continuar con la lecci\u00f3n. Si no lo hace, estos NO podr\u00e1n continuar. \u00bfDesea continuar?
-button.close.branching  =Cierre de ramificaci\u00f3n
-button.close.branching.tooltip  =Cierre la actividad de ramificaci\u00f3n abierta actualmente y volver a la secuencia de la parte superior
 button.journal.entries  =Entradas de diario
 button.journal.entries.tooltip  =Ver todas las entradas al diario
 tab.lesson  =Lecci\u00f3n
@@ -278,7 +252,6 @@ force.complete.end.lesson.confirm  =\u00bfEst\u00e1 seguro que desea forzar a "[
 force.complete.activity.confirm  =\u00bfEst\u00e1 seguro que desea que "[0]" sea enviado a actividad "[1]"?
 force.complete.drop.fail  =Ha depositado a "[0]" en su actividad actual o en una actividad completada "[1]".
 force.complete.end.lesson.tooltip  =Para obligar a un estudiante hasta el final de la lecci\u00f3n, arrastre el icono del estudiante a esta barra.
-learner.group.list.title  =Estudiantes:
 learner.group.count  =Estudiantes en total.
 learner.group.show  =Haga doble clic para ver la lista completa.
 learner.finished.count  =Estudiantes finalizados: [0] de [1]
@@ -291,8 +264,6 @@ button.help  =Ayuda
 button.help.tooltip  =Abrir la p\u00e1gina de ayuda
 button.refresh  =Refrescar
 button.refresh.tooltip  =Actualizar los datos de progreso
-button.export  =Exportar Portfolio
-button.export.tooltip  =Exportar Portfolio con todas las contribuciones
 lesson.presence  =estudiantes en l\u00ednea
 sequence.help.info  =Haga doble clic en una actividad para obtener m\u00e1s detalles
 lesson.learner.url  =URL de lecci\u00f3n:
@@ -316,6 +287,24 @@ learner.group.forward.1  =Pagina siguiente
 learner.group.forward.10  =10 p\u00e1ginas hacia adelante
 learner.group.backward.1  =Pagina anterior
 learner.group.backward.10  =10 p\u00e1ginas atr\u00e1s
+lesson.presence.count  =estudiantes
+email.notify.students.that  =Notificar estudiantes que
+email.notifications.delete  =Borrar
+email.notification.delete.alert1  =Apunto de borrar la notificaci\u00f3n: {0}
+email.notification.delete.alert2  =Esta acci\u00f3n no se puede revertir. Est\u00e1 seguro?
+learner.group.multi.select  =(Para seleccionar simult\u00e1neamente, presiones las teclas ctrl+click or \u2318+click)
+lesson.im  =Mensajer\u00eda instant\u00e1nea
+label.lesson.introduction  =Introducci\u00f3n
+lesson.chart.title  =Estado de lecci\u00f3n
+lesson.chart.started  =En progreso
+lesson.chart.not.started  =Sin comenzar
+lesson.chart.completed  =Finalizado
+class.add.all.confirm  =\u00bfDesea agregar a todos los estudiantes en la clase?
+class.add.all.success  =Todos los estudiantes han sido agregados a la lecci\u00f3n
+button.edit.class.add.all  =Agregar a todos
+force.complete.learner.command.message  =El instructor le ha movido a otra actividad.
+index.emailnotifications  =Comunicaciones
+label.email  =Email
 
 
-#======= End labels: Exported 310 labels for es ES =====
+#======= End labels: Exported 299 labels for es ES =====
