--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:13:25 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 10 19:01:35 CST 2016 
  
 #=================== labels for Assessment =================# 
 
@@ -295,6 +295,7 @@ output.desc.first.score  =First score
 output.desc.average.score  =Average score
 label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he/she commences it.
 label.waiting.for.leader.finish  =Time limit set by teacher is over. Please wait until a group leader finishes the activity.
+warn.mark.hedging.wrong.justification  =Justification cannot be left blank
 
 
-#======= End labels: Exported 289 labels for en AU =====
+#======= End labels: Exported 290 labels for en AU =====
