--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:26:41 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 11 18:12:11 CST 2016 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -527,6 +527,8 @@ label.theme  =Theme
 config.default.theme  =Default theme
 label.2FA.property.enable  =Enable two-factor authentication
 sysadmin.lti.consumer.monitor.roles  =Comma-separated list of monitor roles
+config.failed.attempts  =Number of failed logins before locking account
+config.lock.out.time  =Number of minutes to lock account for
 
 
-#======= End labels: Exported 521 labels for en AU =====
+#======= End labels: Exported 523 labels for en AU =====
