LDEV-3832 Adding labels

--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 08 21:11:32 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 12 09:35:20 CST 2016 
  
 #=================== labels for Mindmap =================# 
 
@@ -95,8 +95,8 @@ button.submit  =Finish
 label.mindmap.options  =Mindmap options
 label.activity.completion  =End of activity
 message.enableFlash  =Sorry, this activity requires the Adobe Flash Player plugin, which does not seem to be present in your browser. Nevertheless, you can continue with the next activities.
-message.enableJavaScript =Enable Javascript for Mindmap to load!
-message.enableFlashAuthorMonitor =Enable Flash for Mindmap to load!
+message.enableJavaScript  =Sorry, enable javascript on your browser to use this activity.
+message.enableFlashAuthorMonitor  =Sorry, this activity requires the Adobe Flash Player plugin, which does not seem to be present in your browser.
 
 
-#======= End labels: Exported 89 labels for en AU =====
+#======= End labels: Exported 91 labels for en AU =====
