--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 08 21:12:42 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 12 09:36:54 CST 2016 
  
 #=================== labels for Mindmap =================# 
 
@@ -95,6 +95,8 @@ button.submit  =Finalizar
 label.mindmap.options  =Options
 label.activity.completion  =Al finalizar actividad
 message.enableFlash  =Esta actividad require del la extension Adobe Flash Player en su browser. De todas formas puede continuar con las siguientes actividades.
+message.enableJavaScript  =Su browser no tiene habilitado javascript. Necesita esta funcionalidad para poder utilizar esta herramienta.
+message.enableFlashAuthorMonitor  =Esta herramienta necesita que su browser tenga instalado Adobe Flash Player.
 
 
-#======= End labels: Exported 89 labels for es ES =====
+#======= End labels: Exported 91 labels for es ES =====
