--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -203,5 +203,8 @@ label.countdown.time.left  =Time left
 label.time.is.over  =Time is over. Processing your answers...
 label.are.you.ready  =You are going to participate in activity that has time limitation. Are you ready to start?
 label.ok  =OK
-
+label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he commences it.
+label.waiting.for.leader.submit.notebook  =Time limit set by teacher is expired. Please wait until a group leader submits notebook.
+label.waiting.for.leader.submit.burning.questions  =Time limit set by teacher is expired. Please wait until a group leader submits burning questions.
+ 	
 #======= End labels: Exported 182 labels for en AU =====
