LDEV-4127: Remove default tool conditions. Fix conditions refresh in Authoring.

--- a/lams_tool_chat/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources.properties
@@ -96,8 +96,7 @@ label.authoring.edit  =Edit
 error.condition.name.blank  =Condition name can not be blank.
 error.condition.duplicated.name  =Duplicated name. Please choose unique one.
 error.condition  =Error creating condition.
-output.desc.text.search.output.definition.chat  =Messages contain certain words
-text.search.output.definition.chat.default.condition  =Messages contain word "LAMS"
+output.desc.user.messages.output.definition.chat  =Messages contain certain words
 textsearch.heading  =Messages that...
 textsearch.all.words  =have all these words:
 textsearch.phrase  =have this exact wording or phrase:
