LDEV-4023: missing label and moved labels to admin which were incorrectly added to central

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 05 03:07:36 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Dec 13 19:20:59 CST 2016 
  
 #=================== labels for LAMS Central =================# 
 
@@ -719,8 +719,7 @@ ckeditor.math.formatting  =Formatting
 authoring.fla.cut.button  =Cut
 authoring.fla.modify.error  =You cannot modify this resource
 authoring.fla.folder.move.to.child.error  =Cannot move a folder into its child
-config.failed.attempts  =Number of failed logins before locking account
-config.lock.out.time  =Number of minutes to lock account for
+label.password.must.lcase  =at least 1 lower case letter
 
 
-#======= End labels: Exported 715 labels for en AU =====
+#======= End labels: Exported 714 labels for en AU =====
