--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 11 18:12:11 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 16 01:48:30 CST 2016 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -529,6 +529,7 @@ label.2FA.property.enable  =Enable two-factor authentication
 sysadmin.lti.consumer.monitor.roles  =Comma-separated list of monitor roles
 config.failed.attempts  =Number of failed logins before locking account
 config.lock.out.time  =Number of minutes to lock account for
+config.default.html.theme  =Default theme
 
 
-#======= End labels: Exported 523 labels for en AU =====
+#======= End labels: Exported 524 labels for en AU =====
