LDEV-4154: Remove SVG export menu item and dialog. Make LAMS export menu item disable/enable correctly.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -552,7 +552,6 @@ authoring.fla.svg.save.error  =Error while saving sequence thumbnail
 authoring.fla.sequence.not.selected.error  =Please choose a sequence
 authoring.fla.sequence.load.error  =Error while loading the sequence
 authoring.fla.transition.from.exists.error  =Transition from this activity already exists
-authoring.fla.export.image.dialog.title  =Image export
 authoring.fla.export.sequence.dialog.title  =Sequence export
 authoring.fla.activity.copy.title.prefix  =Copy [0] of
 authoring.fla.preview.lesson.default.title  =Preview
@@ -619,10 +618,7 @@ authoring.fla.page.menu.import  =Import
 authoring.fla.page.menu.import.part  =Import part
 authoring.fla.page.menu.save  =Save
 authoring.fla.page.menu.saveas  =Save as
-authoring.fla.page.menu.export  =Export
-authoring.fla.page.menu.export.lams  =Sequence LAMS
-authoring.fla.page.menu.export.png  =Image PNG
-authoring.fla.page.menu.export.svg  =Image SVG
+authoring.fla.page.menu.export.lams  =Export
 authoring.fla.page.menu.copy  =Copy
 authoring.fla.page.menu.paste  =Paste
 authoring.fla.page.menu.transition  =Transition
