LDEV-4144: Timezone warning message debugging removed and I18N'd.

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -720,6 +720,7 @@ authoring.fla.cut.button  =Cut
 authoring.fla.modify.error  =You cannot modify this resource
 authoring.fla.folder.move.to.child.error  =Cannot move a folder into its child
 label.password.must.lcase  =at least 1 lower case letter
+label.timezone.warning=Warning: The timezone in LAMS does not match timezone on your computer. The times shown in LAMS will be for the LAMS timezone set in your profile. 
 
 
 #======= End labels: Exported 714 labels for en AU =====
