--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:21:01 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 18 12:06:09 CST 2016 
  
 #=================== labels for ShareResources =================# 
 
@@ -148,7 +148,7 @@ label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar Recursos
 monitor.summary.td.notebookInstructions  =Instrucciones para anotador
-label.authoring.advanced.notify.onassigmentsubmit  =Notificar tutores cuando estudiantes agregar alg\u00fan recurso
+label.authoring.advanced.notify.onassigmentsubmit  =Email instructors when a learner submits a resource
 event.assigment.submit.subject  =LAMS: estudiante ha enviado recurso.
 event.assigment.submit.body  =El estudiante {0} ha enviado un recurso. \n\nEste mensaje ha sido enviado autom\u00e1ticamente.
 error.planner.no.resource.save  =Debe haber por lo mnos un recurso para poder guardar cambios
@@ -168,6 +168,8 @@ label.resource.options  =Opciones
 label.activity.completion  =Al finalizar actividad
 label.notifications  =Notificaciones
 label.authoring.basic.resource.url.placeholder  =Incluir http:// o https://
+label.authoring.advanced.notify.onfileupload  =Notificar a los instructores cuando un alumno carga un archivo
+event.file.upload  ={0} cargado un archivo \"{1} \"
 
 
-#======= End labels: Exported 162 labels for es ES =====
+#======= End labels: Exported 164 labels for es ES =====
