--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:21:02 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 18 12:06:10 CST 2016 
  
 #=================== labels for ShareResources =================# 
 
@@ -168,6 +168,8 @@ label.resource.options  =Resources options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.authoring.basic.resource.url.placeholder  =include http:// or https://
+label.authoring.advanced.notify.onfileupload  =Notify instructors when a learner uploads a file
+event.file.upload  ={0} uploaded a file \"{1}\"
 
 
-#======= End labels: Exported 162 labels for en AU =====
+#======= End labels: Exported 164 labels for en AU =====
