--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Dec 13 19:20:59 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 19 14:55:58 CST 2016 
  
 #=================== labels for LAMS Central =================# 
 
@@ -552,7 +552,6 @@ authoring.fla.svg.save.error  =Error while saving sequence thumbnail
 authoring.fla.sequence.not.selected.error  =Please choose a sequence
 authoring.fla.sequence.load.error  =Error while loading the sequence
 authoring.fla.transition.from.exists.error  =Transition from this activity already exists
-authoring.fla.export.image.dialog.title  =Image export
 authoring.fla.export.sequence.dialog.title  =Sequence export
 authoring.fla.activity.copy.title.prefix  =Copy [0] of
 authoring.fla.preview.lesson.default.title  =Preview
@@ -619,10 +618,7 @@ authoring.fla.page.menu.import  =Import
 authoring.fla.page.menu.import.part  =Import part
 authoring.fla.page.menu.save  =Save
 authoring.fla.page.menu.saveas  =Save as
-authoring.fla.page.menu.export  =Export
-authoring.fla.page.menu.export.lams  =Sequence LAMS
-authoring.fla.page.menu.export.png  =Image PNG
-authoring.fla.page.menu.export.svg  =Image SVG
+authoring.fla.page.menu.export.lams  =Export
 authoring.fla.page.menu.copy  =Copy
 authoring.fla.page.menu.paste  =Paste
 authoring.fla.page.menu.transition  =Transition
@@ -720,7 +716,7 @@ authoring.fla.cut.button  =Cut
 authoring.fla.modify.error  =You cannot modify this resource
 authoring.fla.folder.move.to.child.error  =Cannot move a folder into its child
 label.password.must.lcase  =at least 1 lower case letter
-label.timezone.warning=Warning: The timezone in LAMS does not match timezone on your computer. The times shown in LAMS will be for the LAMS timezone set in your profile. 
+label.timezone.warning  =The timezone set in your profile not match timezone on your computer. The times shown will be for the timezone set in your profile.
 
 
-#======= End labels: Exported 714 labels for en AU =====
+#======= End labels: Exported 711 labels for en AU =====
