LDEV-4144: Showing a growl style message for the timezone warning when the user logins in.

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -530,6 +530,6 @@ sysadmin.lti.consumer.monitor.roles  =Comma-separated list of monitor roles
 config.failed.attempts  =Number of failed logins before locking account
 config.lock.out.time  =Number of minutes to lock account for
 config.default.html.theme  =Default theme
-
+config.show.timezone.warning  =Show warning when user's LAMS timezone does not match their computer/device.
 
 #======= End labels: Exported 524 labels for en AU =====
